samples/_failures_safe/1761794604_c48d0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ba52f35.c: In function ‘main’:
./samples/SAFE/__tmp_4ba52f35.c:167:9: error: expected declaration or statement at end of input
  167 |         sm->buffer[sm->buffer_size - 1] = '\0';
      |         ^~
./samples/SAFE/__tmp_4ba52f35.c:167:9: error: expected declaration or statement at end of input
